Attempt to fix mobile icon bug
-Forcing mobile chrome to use svg file for icon font

-Fixed some layout issues

--- a/resources/css/queries.css
+++ b/resources/css/queries.css
@@ -140,6 +140,11 @@
         margin:0 auto;
     }
     
+    .section-pricing p{
+        text-align: center;
+        margin-left: 3%;
+        margin-right: 3%;
+    }
     
     .section-pricing ul li{
        font-size:100%;
