--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -164,7 +164,7 @@ a:active{
 /* HEADER */
 
 header{
-    background-image: linear-gradient(rgba(0, 0, 0, 0.85), rgba(0, 0, 0, 0.85)), url(img/hero-img2-min.jpg);
+    background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(img/hero-img2-min.jpg);
     background-size: cover;
     background-position: center;
     height: 80vh;
@@ -296,9 +296,7 @@ header{
     width: auto;
 }
 
-.section-features i{
-    margin:15px;
-}
+
 
 /*--------------------------------------------------------------------*/
 
